--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+   <h1>
+     Color Picker
+   </h1>
+   <div class="valueBox"></div>
+   <div class="input">
+      <input type="number" id="red">
+      <input type="number" id="green">
+      <input type="number" id="blue">
+   </div>
+   <script src="script.js"></script>
+</body>
+</html>
