--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
    </h1>
    <div class="valueBox"></div>
    <div class="input">
-      <input type="number" id="red">
-      <input type="number" id="green">
-      <input type="number" id="blue">
+      <input type="number" id="red" min="0.0" max="1.0" step="0.1">
+      <input type="number" id="green" min="0.0" max="1.0" step="0.1">
+      <input type="number" id="blue" min="0.0" max="1.0" step="0.1">
+      <input type="number" id="Light" min="0.0" max="1.0" step="0.1">
    </div>
    <script src="script.js"></script>
 </body>
