--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <link rel="stylesheet" href="styles.css">
+   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
    <h1>
