--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <link type="text/css" rel="stylesheet" href="styles.css" />
 </head>
 <body>
-   <h1>
+   <h1 style = text-align: center;>
      Color Picker
    </h1>
    <div class="valueBox"></div>
