--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       <input type="number" id="green">
       <input type="number" id="blue">
    </div>
-   <script src="script.js"></script>
+   <script src="colorPickerFunction.js"></script>
 </body>
 </html>
