--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <input type="number" id="red" min="0.0" max="1.0" step="0.1">
       <input type="number" id="green" min="0.0" max="1.0" step="0.1">
       <input type="number" id="blue" min="0.0" max="1.0" step="0.1">
+      <input type="number" id="light" min="0.0" max="1.0" step="0.1">
    </div>
    <script src="colorPickerFunction.js"></script>
 </body>
