--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <input type="number" id="red">
       <input type="number" id="green">
       <input type="number" id="blue">
+      <input type="number" id="light">
    </div>
    <script src="colorPickerFunction.js"></script>
 </body>
