--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
    <h1>
      Color Picker
    </h1>
+   <h2>
+      Use the arrow up and down keys.
+   </h2>
    <div class="valueBox"></div>
    <div class="input">
       <input type="number" id="red">
