--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
    <p><a href = "https://github.com/kocherer/ColorPicker">Color Picker - GitHub</a></p>
    <p><a href = "https://www.pivotaltracker.com/n/projects/2597489">Color Picker - Pivotal Tracker</a><p>
    <div class="valueBox"></div>
-   <h2>
-      Use the arrow up and down keys.
-   </h2>
+   <p>Use the arrow up and down keys.</p>
    <div class="input">
       <input type="number" id="red">
       <input type="number" id="green">
