--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
    <p><a href = "https://github.com/kocherer/ColorPicker">Color Picker - GitHub</a></p>
    <p><a href = "https://www.pivotaltracker.com/n/projects/2597489">Color Picker - Pivotal Tracker</a><p>
    <div class="valueBox"></div>
-   <p>Use the arrow up and down keys.</p>
+   <h3>
+      Use the arrow up and down keys.
+   </h3>
    <div class="input">
       <input type="number" id="red">
       <input type="number" id="green">
